--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Birthday!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy 6 Months!</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="card">
-    <h1>🎉 Happy Birthday, [Her Name]! 🎂</h1>
-    <p>You're amazing and I hope your day is just as special as you are.</p>
-    <p>❤️ Love, [Your Name]</p>
+  <div class="floral-border top"></div>
+  <div class="container">
+    <header>
+      <h1>💖 Happy 6 Months With You! 💖</h1>
+    </header>
+
+    <main>
+      <section class="card-text">
+        <p>
+          My love,
+        </p>
+        <p>
+          These six months with you have been more magical than I ever imagined. You've brought joy, peace,
+          and so much laughter into my life. Every little moment with you — from quiet walks to silly texts
+          — means the world to me. Here's to everything we've shared and all the adventures still to come. 💕
+        </p>
+        <p>
+          Forever yours,
+          <br>
+          [Your Name]
+        </p>
+      </section>
+
+      <aside class="photo-collage">
+        <img src="images/photo1.jpg" alt="Us 1">
+        <img src="images/photo2.jpg" alt="Us 2">
+        <img src="images/photo3.jpg" alt="Us 3">
+        <img src="images/photo4.jpg" alt="Us 4">
+        <img src="images/photo5.jpg" alt="Us 5">
+        <img src="images/photo6.jpg" alt="Us 6">
+      </aside>
+    </main>
   </div>
+  <div class="floral-border bottom"></div>
 </body>
 </html>
