--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <body>
   <div class="page-wrapper">
     <div class="photo-strip">
-      <img src="images/photo1.jpg" alt="Us 1">
-      <img src="images/photo2.jpg" alt="Us 2">
-      <img src="images/photo3.jpg" alt="Us 3">
+      <img src="101_1076.jpg" alt="Us 1">
+      <img src="IMG_4771.jpg" alt="Us 2">
+      <img src="IMG_6286.heic" alt="Us 3">
     </div>
 
     <div class="card-box">
@@ -84,15 +84,15 @@
         </p>
         <p>
           Forever yours,<br>
-          [Your Name]
+          Anand
         </p>
       </div>
     </div>
 
     <div class="photo-strip">
-      <img src="images/photo4.jpg" alt="Us 4">
-      <img src="images/photo5.jpg" alt="Us 5">
-      <img src="images/photo6.jpg" alt="Us 6">
+      <img src="IMG_6554.jpg" alt="Us 4">
+      <img src="IMG_8691.heic" alt="Us 5">
+      <img src="IMG_9836.heic" alt="Us 6">
     </div>
   </div>
 </body>
