--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 <body>
   <div class="page-wrapper">
     <div class="photo-strip">
-      <img src="101_1076.jpg" alt="Us 1">
-      <img src="IMG_4771.jpg" alt="Us 2">
-      <img src="IMG_6286.heic" alt="Us 3">
+      <img src="photo1.JPG" alt="Us 1">
+      <img src="photo2.JPG" alt="Us 2">
+      <img src="photo3.jpg" alt="Us 3">
     </div>
 
     <div class="card-box">
@@ -90,9 +90,9 @@
     </div>
 
     <div class="photo-strip">
-      <img src="IMG_6554.jpg" alt="Us 4">
-      <img src="IMG_8691.heic" alt="Us 5">
-      <img src="IMG_9836.heic" alt="Us 6">
+      <img src="photo4.jpg" alt="Us 4">
+      <img src="photo5.jpg" alt="Us 5">
+      <img src="photo6.JPG" alt="Us 6">
     </div>
   </div>
 </body>
