--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Open Sans', sans-serif;
-      background: #fff0f5 url('https://www.transparenttextures.com/patterns/flower.png');
+      background: #fff0f5 url('https://www.transparenttextures.com/patterns/roses.png') repeat;
       background-size: cover;
       color: #4b2e2e;
       display: flex;
@@ -34,8 +34,8 @@
     }
 
     .photo-strip img {
-      width: 100px;
-      height: 100px;
+      width: 200px;
+      height: 200px;
       object-fit: cover;
       border-radius: 10px;
       border: 3px solid #ffb6c1;
@@ -51,14 +51,14 @@
     }
 
     h1 {
-      font-family: 'Great Vibes', cursive;
+      font-family: 'Dancing Script', cursive;
       font-size: 3rem;
       text-align: center;
       color: #d63384;
     }
 
     .card-text {
-      font-size: 1.2rem;
+      font-size: 1rem;
       line-height: 1.8;
       text-align: left;
       margin-top: 1.5rem;
@@ -76,14 +76,21 @@
     <div class="card-box">
       <h1>💖 Happy 6 Months With You! 💖</h1>
       <div class="card-text">
-        <p>My love,</p>
+        <p>Dear Sathvika,</p>
         <p>
-          These six months with you have been more magical than I ever imagined. You've brought joy, peace,
-          and so much laughter into my life. Every little moment with you — from quiet walks to silly texts
-          — means the world to me. Here's to everything we've shared and all the adventures still to come. 💕
+          I guess since my first letter did not reach you (curses upon your name USPS), this will have to do. 
+          It's a difficult task to put into words how much love there is for you in my heart, but I'll try 
+          at the cost of this — whatever this is — becoming a bit lengthy. From the beginning, I was convinced
+          that you and I would work out, no matter what distances or time zones separated us, and for this reason I've 
+          never once doubted that fact. Now that I cannot hold you for the time being, your face and our memories cross
+          my mind more often than you can think, and I'm constantly awaiting the day when you run into my arms and I
+          never have to let go. I'm the happiest man in the world, now that you have entered my life, and I will always
+          be grateful to you for accepting the invitation I posed that Diwali day. Please never fear that I might lose
+          these emotions, for your well-being and happiness is my own. If this is not true love, then I fear that I may 
+          never experience it at all. I love you so much, Sathvika Sitaraman, and I count down the days till we meet again.
         </p>
         <p>
-          Forever yours,<br>
+          Love,<br>
           Anand
         </p>
       </div>
