--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Open Sans', sans-serif;
-      background: #fff0f5 url('https://www.transparenttextures.com/patterns/roses.png') repeat;
+      background: #fff0f5 url('https://www.transparenttextures.com/patterns/roses.png');
       background-size: cover;
       color: #4b2e2e;
       display: flex;
@@ -58,7 +58,7 @@
     }
 
     .card-text {
-      font-size: 1rem;
+      font-size: 1.01rem;
       line-height: 1.8;
       text-align: left;
       margin-top: 1.5rem;
