--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     h1 {
       font-family: 'Dancing Script', cursive;
-      font-size: 3rem;
+      font-size: 2.75rem;
       text-align: center;
       color: #d63384;
     }
@@ -94,6 +94,10 @@
           Anand
         </p>
       </div>
+      <iframe width="80" height="45" src="https://www.youtube.com/embed/v02bRjb50EI?si=r2_mppGUWaVWSsEs&amp;start=188" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      </iframe>
     </div>
 
     <div class="photo-strip">
