--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
           Anand
         </p>
       </div>
-      <iframe width="80" height="45" src="https://www.youtube.com/embed/v02bRjb50EI?si=r2_mppGUWaVWSsEs&amp;start=188" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-        gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-      </iframe>
+      <div style="display: flex; justify-content: center; margin-top: 1rem;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/v02bRjb50EI?si=r2_mppGUWaVWSsEs&amp;start=188" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+          gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+      </div>
     </div>
 
     <div class="photo-strip">
